<resources>
  <string name="app_name">sample_02</string>
  <string name="account">Account</string>
  <string name="user_account">user_account</string>
  <string name="password">Password</string>
  <string name="user_password">user_password</string>
  <string name="login">login</string>
  <string name="cancel">cancel</string>
  <string name="title_activity_base">baseActivity</string>
  <string name="title_activity_test">TestActivity</string>
  <string name="reset">reset</string>
  <string name="setting">setting</string>
  <string name="title_activity_finance">FinanceActivity</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
