<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="47dp"
      tools:ignore="MissingConstraints"
      >
    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/account"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/ed_account"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/user_account"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/tv_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_account"
        />
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:text="@string/password"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/ed_account"
        app:layout_constraintTop_toBottomOf="@+id/ed_account"
        />
    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/btn_login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="40dp"
          android:layout_weight="1"
          android:onClick="login"
          android:text="@string/login"
          app:layout_constraintStart_toStartOf="@+id/ed_password"
          app:layout_constraintTop_toBottomOf="@+id/ed_password"
          />
      <Button
          android:id="@+id/btn_cancel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_marginTop="40dp"
          android:layout_weight="1"
          android:onClick="cancel"
          android:text="@string/cancel"
          app:layout_constraintStart_toEndOf="@+id/btn_login"
          app:layout_constraintTop_toBottomOf="@+id/ed_password"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="unidyna/123"
          android:textAlignment="center"
          android:textSize="18sp"
          />
      <Button
          android:id="@+id/btn_reset"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:onClick="reset"
          android:text="@string/reset"
          />
    </LinearLayout>
  </LinearLayout>
</android.support.constraint.ConstraintLayout>